--- a/orders-microservice/orders-microservice/orders-microservice.csproj
+++ b/orders-microservice/orders-microservice/orders-microservice.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <RootNamespace>users_microservice</RootNamespace>
+        <RootNamespace>orders_microservice</RootNamespace>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
