--- a/orders-microservice/orders-microservice/appsettings.json
+++ b/orders-microservice/orders-microservice/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=localhost:5432;Database=users;User Id=postgres;Password=postgres;"
+    "Default": "Server=localhost:5433;Database=orders;User Id=postgres;Password=postgres;"
   },
   "RabbitMQ": {
     "Host": "localhost",
