--- a/orders-microservice/orders-microservice/appsettings.json
+++ b/orders-microservice/orders-microservice/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=localhost:5433;Database=orders;User Id=postgres;Password=postgres;"
+    "Default": "Server=postgres-orders:5432;Database=orders;User Id=postgres;Password=postgres;"
   },
   "RabbitMQ": {
-    "Host": "localhost",
+    "Host": "rabbitmq",
     "Username": "rabbitmq",
     "Password": "rabbitmq"
   }
