--- a/products-microservice/products-microservice/appsettings.Development.json
+++ b/products-microservice/products-microservice/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=localhost:5434;Database=products;User Id=postgres;Password=postgres;"
   }
 }
