--- a/users-microservice/users-microservice/Dockerfile
+++ b/users-microservice/users-microservice/Dockerfile
@@ -1,21 +1,18 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["/users-microservice.csproj", "users-microservice/"]
-RUN dotnet restore "users-microservice/users-microservice.csproj"
+COPY ["users-microservice.csproj", "."]
+RUN dotnet restore "./users-microservice.csproj"
 COPY . .
-WORKDIR "/src/users-microservice"
-RUN dotnet build "users-microservice.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./users-microservice.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "users-microservice.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./users-microservice.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
