--- a/users-microservice/users-microservice/appsettings.Development.json
+++ b/users-microservice/users-microservice/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=localhost:5432;Database=users;User Id=postgres;Password=postgres;"
+  },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Username": "rabbitmq",
+    "Password": "rabbitmq"
   }
 }
