--- a/users-microservice/users-microservice/appsettings.json
+++ b/users-microservice/users-microservice/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=localhost:5432;Database=users;User Id=postgres;Password=postgres;"
+    "Default": "Server=postgres-users:5432;Database=users;User Id=postgres;Password=postgres;"
   },
   "RabbitMQ": {
-    "Host": "localhost",
+    "Host": "rabbitmq",
     "Username": "rabbitmq",
     "Password": "rabbitmq"
   }
