--- a/products-microservice/products-microservice/Dockerfile
+++ b/products-microservice/products-microservice/Dockerfile
@@ -1,21 +1,18 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER $APP_UID
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
+EXPOSE 8082
 
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["products-microservice/products-microservice.csproj", "products-microservice/"]
-RUN dotnet restore "products-microservice/products-microservice.csproj"
+COPY ["products-microservice.csproj", "."]
+RUN dotnet restore "./products-microservice.csproj"
 COPY . .
-WORKDIR "/src/products-microservice"
-RUN dotnet build "products-microservice.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./products-microservice.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "products-microservice.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./products-microservice.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
