--- a/products-microservice/products-microservice/appsettings.json
+++ b/products-microservice/products-microservice/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=localhost:5434;Database=products;User Id=postgres;Password=postgres;"
+    "Default": "Server=postgres-products:5432;Database=products;User Id=postgres;Password=postgres;"
   }
 }
