atualizando credenciais banco e mensageria

--- a/orders-microservice/orders-microservice/appsettings.json
+++ b/orders-microservice/orders-microservice/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=postgres-orders:5432;Database=orders;User Id=postgres;Password=postgres;"
+    "Default": "Host=pgengsw.postgres.database.azure.com;Username=pgadmin@pgengsw;Password=SuaSenhaForte1!;Ssl Mode=Require;Trust Server Certificate=false;"
   },
   "RabbitMQ": {
-    "Host": "rabbitmq",
-    "Username": "rabbitmq",
-    "Password": "rabbitmq"
+    "Host": "rabbitmq-rg-eng-sw.eastus.azurecontainer.io",
+    "Username": "usr",
+    "Password": "pwd"
   }
 }
