--- a/products-microservice/products-microservice/appsettings.json
+++ b/products-microservice/products-microservice/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=postgres-products:5432;Database=products;User Id=postgres;Password=postgres;"
+    "Default": "Host=pgengsw.postgres.database.azure.com;Username=pgadmin@pgengsw;Password=SuaSenhaForte1!;Ssl Mode=Require;Trust Server Certificate=false;"
   }
 }
